<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
      >

    <GridView
        android:id="@+id/gv_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:cacheColorHint="#00000000"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:stretchMode="columnWidth" >
    </GridView>

    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_gridview"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_start_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_start_service" />

        <Button
            android:id="@+id/btn_stop_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stop_service" />

        <Button
            android:id="@+id/btn_bind_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bind_service" />

        <Button
            android:id="@+id/btn_unbind_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_unbind_service" />

        <Button
            android:id="@+id/btn_rebind_service"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/tv_rebind_service" />
        <Button
            android:id="@+id/btn_front_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_front_service" />
    </LinearLayout>
    <LinearLayout 
        android:layout_below="@id/linear_container"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        >
        <Button 
            android:id="@+id/btn_anr_service"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/tv_anr_service"
            />
        <Button 
            android:id="@+id/btn_no_anr_service"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_no_anr_service"
            />
    </LinearLayout>

</RelativeLayout>